--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -18,8 +18,12 @@
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
+
+
     <div class="content">
-      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      <div class="image">
+        <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      </div>
       <div class="input">
         <input type="text">
       </div>
@@ -28,6 +32,8 @@
         <button>Do the other thing!</button>
       </div>
     </div>
+
+
     <div class="footer">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
